--- a/templates/provider.html
+++ b/templates/provider.html
@@ -1,16 +1,13 @@
 <div class="provider">
     <!-- Page Header -->
     <div class="content bg-gray-lighter">
-        <div class="row items-push">
+        <div class="row">
             <div class="col-sm-5 hidden-xs">
                 <ol class="breadcrumb">
                     <li>供用商管理</li>
-                    <li><a class="link-effect" href="">DataTables</a></li>
+                    <li><a class="link-effect" href="">供应商详情</a></li>
                 </ol>
-            </div>
-            <div class="text-right">
-                <button class="btn btn-primary">添加供应商</button>
-            </div>
+            </div>   
         </div>
     </div>
     <!-- END Page Header -->
@@ -36,12 +33,14 @@
                         <option value="0">全部</option>
                         <option value="1">主材</option>
                         <option value="2">辅材</option>
-                        <option value="3"></option>
                     </select>
             </div>
             <div class="form-group">
-                <button class="btn btn-primary" type="submit">查询</button>
+                <button class="btn btn-info" type="submit">查询</button>
                 <button class="btn btn-primary" type="submit">重置</button>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-warning">添加供应商</button>
             </div>
         </form>
     </div>
