--- a/assets/css/provider.css
+++ b/assets/css/provider.css
@@ -1,28 +1,79 @@
-.provider .form-check > div:nth-child(1) {
-  width: 20%; }
-  .provider .form-check > div:nth-child(1) > label {
-    margin-right: 4%; }
-
-.provider .form-check > div:nth-child(2) {
-  width: 20%; }
-  .provider .form-check > div:nth-child(2) > label {
-    margin-right: 4%; }
-
-.provider .form-check > div:nth-child(3) {
-  width: 20%; }
-  .provider .form-check > div:nth-child(3) > label {
-    margin-right: 4%; }
-
-.provider .form-check > div:nth-child(4) {
-  width: 16%; }
-  .provider .form-check > div:nth-child(4) > label {
-    margin-right: 4%; }
-
-.provider .form-check > div:nth-child(5) {
-  width: 16%;
-  text-align: right; }
-  .provider .form-check > div:nth-child(5) > label {
-    margin-right: 4%; }
-
 .breadcrumb {
   font-size: 16px !important; }
+
+.content {
+  padding: 10px 30px;
+  margin: 15px 0; }
+
+.content-check {
+  background: #e5e5e5;
+  padding: 10px 10px;
+  margin: 0 30px; }
+
+.bg-gray-lighter {
+  border-top: 1px solid #fff;
+  border-bottom: 2px solid #fff;
+  background-color: #fefefe; }
+
+.provider .form-check > div:nth-child(1) {
+  width: 18%; }
+  .provider .form-check > div:nth-child(1) > label {
+    margin-right: 2%; }
+
+.provider .form-check > div:nth-child(2) {
+  width: 18%; }
+  .provider .form-check > div:nth-child(2) > label {
+    margin-right: 2%; }
+
+.provider .form-check > div:nth-child(3) {
+  width: 18%; }
+  .provider .form-check > div:nth-child(3) > label {
+    margin-right: 2%; }
+
+.provider .form-check > div:nth-child(4) {
+  width: 18%; }
+  .provider .form-check > div:nth-child(4) > label {
+    margin-right: 2%; }
+
+.provider .form-check > div:nth-child(5) {
+  width: 20%; }
+  .provider .form-check > div:nth-child(5) > label {
+    margin-right: 2%; }
+
+.provider-details .supplyinfo tbody td a {
+  margin-left: 6%; }
+
+.provider-details .supplyinfo-view .table > tbody tr > th {
+  text-align: center;
+  vertical-align: middle;
+  background: #e4e4e4; }
+
+.provider-details .supplyinfo-view .table > tbody tr > td {
+  text-align: center; }
+
+.provider-details .supplyinfo-view .form-check {
+  padding: 6px 10px;
+  background: #e5e5e5; }
+  .provider-details .supplyinfo-view .form-check > div:nth-child(1) {
+    width: 18%; }
+    .provider-details .supplyinfo-view .form-check > div:nth-child(1) > label {
+      margin-right: 2%; }
+  .provider-details .supplyinfo-view .form-check > div:nth-child(2) {
+    width: 18%; }
+    .provider-details .supplyinfo-view .form-check > div:nth-child(2) > label {
+      margin-right: 2%; }
+  .provider-details .supplyinfo-view .form-check > div:nth-child(3) {
+    width: 32%; }
+    .provider-details .supplyinfo-view .form-check > div:nth-child(3) > label {
+      margin-right: 2%; }
+  .provider-details .supplyinfo-view .form-check > div:nth-child(4) {
+    width: 18%; }
+    .provider-details .supplyinfo-view .form-check > div:nth-child(4) > label {
+      margin-right: 2%; }
+  .provider-details .supplyinfo-view .form-check > div:nth-child(5) {
+    width: 12%; }
+    .provider-details .supplyinfo-view .form-check > div:nth-child(5) .btn {
+      margin-right: 4%; }
+
+.provider-details .orderinfo .table {
+  margin-top: 20px; }
