--- a/assets/scss/provider.scss
+++ b/assets/scss/provider.scss
@@ -1,40 +1,137 @@
+.breadcrumb {
+	font-size: 16px !important;
+}
+.content {
+	padding: 10px 30px;
+	margin: 15px 0;
+		
+}
+.content-check {
+	background: #e5e5e5;
+	padding: 10px 10px;
+	margin: 0 30px;
+}
+.bg-gray-lighter {
+	border-top: 1px solid #fff;	
+	border-bottom: 2px solid #fff;
+	background-color: #fefefe;
+}
+// 供应商管理
 .provider {
 	.form-check {
 
 		& > div:nth-child(1) {
-			width: 20%;
+			width: 18%;
 			> label {
-				margin-right: 4%; 
+				margin-right: 2%; 
 			}
 		}
 		& > div:nth-child(2) {
-			width: 20%;
+			width: 18%;
 			> label {
-				margin-right: 4%; 
+				margin-right: 2%; 
 			}
 		}
 		& > div:nth-child(3) {
-			width: 20%;
+			width: 18%;
 			> label {
-				margin-right: 4%; 
+				margin-right: 2%; 
 			}
 		}
 		& > div:nth-child(4) {
-			width: 16%;
+			width: 18%;
 			> label {
-				margin-right: 4%; 
+				margin-right: 2%; 
 			}
 		}
 		& > div:nth-child(5) {
-			width: 16%;
-			text-align: right;
+			width: 20%;
 			> label {
-				margin-right: 4%; 
+				margin-right: 2%; 
 			}
 		}
 	}
-}	
 	
-.breadcrumb {
-	font-size: 16px !important;
 }
+
+// 供应商详情
+.provider-details {
+
+	// 供应商信息
+	.supplyinfo {
+		tbody {
+			td {
+				a {
+					margin-left: 6%;
+				}
+			}
+		}
+		
+	}
+	
+	.supplyinfo-view {
+		.table {
+			> tbody {
+				tr {
+					> th {
+						text-align: center;
+						vertical-align: middle;
+						background: #e4e4e4;
+					}
+					> td {
+						text-align: center;	
+					}
+				}	
+			}
+		}
+
+		.form-check {
+
+			padding: 6px 10px;
+			background: #e5e5e5;
+
+			& > div:nth-child(1) {
+				width: 18%;
+				> label {
+					margin-right: 2%; 
+				}
+			}
+			& > div:nth-child(2) {
+				width: 18%;
+				> label {
+					margin-right: 2%; 
+				}
+			}
+			& > div:nth-child(3) {
+				width: 32%;
+				> label {
+					margin-right: 2%; 
+				}
+			}
+			& > div:nth-child(4) {
+				width: 18%;
+				> label {
+					margin-right: 2%; 
+				}
+			}
+			& > div:nth-child(5) {
+				width: 12%;
+				.btn {
+					margin-right: 4%;
+				}
+			}
+		}
+	}
+
+	
+
+	// 订单信息
+	.orderinfo {
+		.table {
+			margin-top: 20px;
+		}
+	}	
+}
+
+
+	
