--- a/templates/sideBar.html
+++ b/templates/sideBar.html
@@ -20,7 +20,7 @@
                     <a href="index.html"><i class="si si-speedometer"></i><span class="sidebar-mini-hide">首页</span></a>
                 </li>
                 <li>
-                    <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-badge"></i><span class="sidebar-mini-hide">内容管理</span></a>
+                    <a class="nav-submenu" data-toggle="nav-submenu" ><i class="si si-badge"></i><span class="sidebar-mini-hide">内容管理</span></a>
                     <ul>
                         <li>
                             <a href="base_ui_widgets.html">文章管理</a>
@@ -82,7 +82,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-wrench"></i><span class="sidebar-mini-hide">供应商管理</span></a>
+                    <a class="nav-submenu" data-toggle="nav-submenu" ><i class="si si-wrench"></i><span class="sidebar-mini-hide">供应商管理</span></a>
                     <ul>
                         <li>
                             <a ui-sref="provider">供应商管理</a>
