--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,16 @@
 
 #page-container.no-login #main-container .login {
   float: none; }
+
+#header-navbar {
+  padding: 0; }
+  #header-navbar .nav-header.pull-right {
+    padding: 13px 30px; }
+  #header-navbar .navbar-nav li {
+    height: 60px;
+    line-height: 60px; }
+    #header-navbar .navbar-nav li a {
+      padding: 20px 20px;
+      color: #333; }
+    #header-navbar .navbar-nav li.active a {
+      background: #f5f5f5; }
