--- a/templates/header.html
+++ b/templates/header.html
@@ -1,14 +1,15 @@
 <div>
     <!-- <ul class="nav-header pull-left"> -->
-<!--     <ul class="nav-header pull-left">
-        <li><a href="#">Ê×Ò³</a></li>
-        <li><a href="#">ÄÚÈÝ¹ÜÀí</a></li>
-        <li><a href="#">»áÔ±¹ÜÀí</a></li>
-        <li><a href="#">×°ÐÞ¹ÜÀí</a></li>
-        <li><a href="#">¹©Ó¦ÉÌ¹ÜÀí</a></li>
-        <li><a href="#">²ÆÎñ¹ÜÀí</a></li>
-        <li><a href="#">ÉêËß¹ÜÀí</a></li>
-    </ul> -->
+
+    <ul class="nav navbar-nav pull-left">
+        <li class="active"><a href="#" >é¦–é¡µ</a></li>
+        <li><a href="#">å†…å®¹ç®¡ç†</a></li>
+        <li><a href="#">ä¼šå‘˜ç®¡ç†</a></li>
+        <li><a href="#">è£…ä¿®ç®¡ç†</a></li>
+        <li><a href="#">ä¾›åº”å•†ç®¡ç†</a></li>
+        <li><a href="#">è´¢åŠ¡ç®¡ç†</a></li>
+        <li><a href="#">ç”³è¯‰ç®¡ç†</a></li>
+    </ul>
     <!-- Header Navigation Right -->
     <ul class="nav-header pull-right">
         <li>
