--- a/templates/provider_details.html
+++ b/templates/provider_details.html
@@ -363,7 +363,7 @@
 
                             <!-- 订单信息查看-未完成 -->
                             <div class="orderinfo-un-view" style="display: none;">
-                                <div class="block-content">
+                                <div class="orderinfo-un-order">
                                     <h4>订单详情</h4>
                                     <table class="table table-bordered">
                                         <tbody>
@@ -394,7 +394,7 @@
                                         </tbody>
                                     </table>                                   
                                 </div>
-                                <div class="block-content">
+                                <div class="orderinfo-un-goods">
                                     <h4>商品信息</h4>
                                     <div class="table-responsive push-50">
                                         <table class="table table-bordered table-hover">
@@ -449,15 +449,15 @@
                                                 </tr>
                                             </tbody>
                                         </table>
-                                        </div>
-                                        </div>
-                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 
-                                        <!-- 订单信息查看-已完成 -->
-                                        <div class="orderinfo-complete-view block-content">
-                                        <div class="deliveryinfo">
-                                        <h4>订单详情</h4>
-                                        <table class="table table-bordered">
+                            <!-- 订单信息查看-已完成 -->
+                            <div class="orderinfo-complete-view">
+                                <div class="orderinfo-complete-order">
+                                    <h4>订单详情</h4>
+                                    <table class="table table-bordered">
                                         <tbody>
                                             <tr>
                                                 <th>订单状态</th>
@@ -484,11 +484,11 @@
                                                 <td>重庆飘瑞斯特贸易有限公司</td>
                                             </tr>
                                         </tbody>
-                                        </table>
-                                        </div>
-                                        <div class="deliveryinfo">
-                                        <h4>商品信息</h4>
-                                        <div class="table-responsive push-50">
+                                    </table>
+                                </div>
+                                <div class="orderinfo-complete-goods">
+                                    <h4>商品信息</h4>
+                                    <div class="table-responsive">
                                         <table class="table table-bordered table-hover">
                                             <thead>
                                                 <tr>
@@ -541,92 +541,74 @@
                                                 </tr>
                                             </tbody>
                                         </table>
-                                        </div>
-                                        </div>
-                                        <div class="deliveryinfo">
-                                        <h4>发货信息</h4>
-
-                                        <table class="table table-bordered deliveryinfo-table">
-                                            <thead>
-                                                <tr>
-                                                    <th class="text-left" colspan="5">
-                                                        共计2件 预计进场时间：2016-08-21 物流公司：韵达快递 运单编号：45896542698754623562
-                                                    </th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <td class="text-center">1</td>
-                                                    <td class="font-w600">Denise Watson</td>
-                                                    <td class="hidden-xs">client1@example.com</td>
-                                                    <td class="hidden-xs">
-                                                        <span class="label label-primary">Personal</span>
-                                                    </td>
-                                                    <td class="text-center">
-                                                        <div class="btn-group">
-                                                            <button class="btn btn-xs btn-default" type="button" data-toggle="tooltip" title="Edit Client"><i class="fa fa-pencil"></i></button>
-                                                            <button class="btn btn-xs btn-default" type="button" data-toggle="tooltip" title="Remove Client"><i class="fa fa-times"></i></button>
+                                    </div>
+                                </div>
+                                <div class="orderinfo-complete-delivery">
+                                    <h4>发货信息</h4>
+                                    <table class="table table-bordered deliveryinfo-table">
+                                        <thead>
+                                            <tr>
+                                                <th class="text-left" colspan="5">
+                                                    共计2件 预计进场时间：2016-08-21 物流公司：韵达快递 运单编号：45896542698754623562
+                                                </th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td class="text-center">1</td>
+                                                <th class="font-w600">智能家居系统</th>
+                                                <td class="hidden-xs">品牌：HOMEKIT</td>
+                                                <td class="hidden-xs">×1</td>
+                                                <td class="text-center">下单时间：2016-08-15 15:21 ：30</td>
+                                            </tr>
+                                            <tr>
+                                                <td class="text-center">2</td>
+                                                <th class="font-w600">毛细管制冷系统</th>
+                                                <td class="hidden-xs">品牌：定制</td>
+                                                <td class="hidden-xs">×1</td>
+                                                <td class="text-center">下单时间：2016-08-15 15:21 ：30</td>
+                                            </tr>
+                                            <tr>
+                                                <td colspan="5">
+                                                    <div class="row">
+                                                        <div class="col-md-6 deliveryinfo-sign">
+                                                            <div class=" col-md-6">
+                                                                <p>已签收</p>
+                                                                <p>
+                                                                    <span>签收人：张佳</span>
+                                                                    <span>项目经理</span>
+                                                                </p>
+                                                                 <p>签收时间：2016-08-20 15:26:12</p>
+                                                            </div>
+                                                            <div class="deliveryinfo-order-pic col-md-6">
+                                                                <img src="http://placehold.it/60x60">
+                                                                <img src="http://placehold.it/60x60">
+                                                                <img src="http://placehold.it/60x60">
+                                                            </div>
                                                         </div>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="text-center">2</td>
-                                                    <td class="font-w600">Ethan Howard</td>
-                                                    <td class="hidden-xs">client2@example.com</td>
-                                                    <td class="hidden-xs">
-                                                        <span class="label label-danger">Disabled</span>
-                                                    </td>
-                                                    <td class="text-center">
-                                                        <div class="btn-group">
-                                                            <button class="btn btn-xs btn-default" type="button" data-toggle="tooltip" title="Edit Client"><i class="fa fa-pencil"></i></button>
-                                                            <button class="btn btn-xs btn-default" type="button" data-toggle="tooltip" title="Remove Client"><i class="fa fa-times"></i></button>
-                                                        </div>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td colspan="5">
+                                                        <div class="col-md-6">
+                                                            <div class="deliveryinfo-sign col-md-6">
+                                                                <p>确认签收</p>
+                                                                <p>
+                                                                    <span>签收人：张楠</span>
+                                                                    <span>监理</span>
+                                                                </p>
+                                                                <p>签收时间：2016-08-20 15:26:12</p>
+                                                            </div>
+                                                            <div class="deliveryinfo-order-pic col-md-6">
+                                                                <img src="http://placehold.it/60x60">
+                                                                <img src="http://placehold.it/60x60">
+                                                                <img src="http://placehold.it/60x60">
+                                                            </div>
+                                                        </div>                                                            
+                                                    </div>
 
-                                                        <ul class="row">
-                                                            <li class="col-md-6 deliveryinfo-sign">
-                                                                <div class=" col-md-4">
-                                                                    <p>已签收</p>
-                                                                    <p>
-                                                                        <span>签收人：张佳</span>
-                                                                        <span>项目经理</span>
-                                                                        <span>签收时间：2016-08-20 15:26:12</span>
-                                                                    </p>
-                                                                </div>
-                                                                <div class="deliveryinfo-order-pic col-md-8">
-                                                                    <img src="http://placehold.it/60x60">
-                                                                    <img src="http://placehold.it/60x60">
-                                                                    <img src="http://placehold.it/60x60">
-                                                                </div>
-                                                            </li>
-                                                            <li class="col-md-6">
-                                                                <div class="deliveryinfo-sign col-md-4">
-                                                                    <p>确认签收</p>
-                                                                    <p>
-                                                                        <span>签收人：张楠</span>
-                                                                        <span>监理</span>
-                                                                        <span>签收时间：2016-08-20 15:26:12</span>
-                                                                    </p>
-                                                                </div>
-                                                                <div class="deliveryinfo-order-pic col-md-8">
-                                                                    <img src="http://placehold.it/60x60">
-                                                                    <img src="http://placehold.it/60x60">
-                                                                    <img src="http://placehold.it/60x60">
-                                                                </div>
-                                                            </li>                                                            
-                                                        </ul>
-
-                                                    </td>
-                                                </tr>                                                
-                                            </tbody>
-
-
-                                        </table>                                    
-                                   <!--  <div> -->
-                                        <div class="col-sm-6 col-lg-12">
+                                                </td>
+                                            </tr>                                                
+                                        </tbody>
+                                    </table>                                    
+                                    <!-- <div> -->
+                                        <!-- <div class="col-sm-6 col-lg-12">
                                             <div class="block block-themed">
                                                 <div class="block-header bg-muted">
                                                     <ul class="block-options">
@@ -692,7 +674,7 @@
                                                     </ul>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </div> -->
                                     <!-- </div> -->
                                 </div>
                             </div>
