--- a/assets/css/provider.css
+++ b/assets/css/provider.css
@@ -36,9 +36,13 @@
     margin-right: 2%; }
 
 .provider .form-check > div:nth-child(5) {
-  width: 20%; }
+  width: 16%; }
   .provider .form-check > div:nth-child(5) > label {
     margin-right: 2%; }
+
+.provider .form-check > div:nth-child(6) {
+  width: 10%;
+  text-align: right; }
 
 .provider-details .supplyinfo .table tbody td a {
   margin-left: 6%; }
