--- a/assets/scss/provider.scss
+++ b/assets/scss/provider.scss
@@ -45,10 +45,14 @@
 			}
 		}
 		& > div:nth-child(5) {
-			width: 20%;
+			width: 16%;
 			> label {
 				margin-right: 2%; 
 			}
+		}
+		& > div:nth-child(6) {
+			width: 10%;
+			text-align: right;
 		}
 	}
 	
