--- a/templates/provider_details.html
+++ b/templates/provider_details.html
@@ -401,9 +401,9 @@
                                             <thead>
                                                 <tr>
                                                     <th class="text-center" style="width: 50px;"></th>
-                                                    <th>商品名称</th>
+                                                    <th class="text-center">商品名称</th>
                                                     <th class="text-center" style="width: 100px;">商品编号</th>
-                                                    <th class="text-right" style="width: 120px;">单位</th>
+                                                    <th class="text-center" style="width: 120px;">单位</th>
                                                     <th class="text-right" style="width: 120px;">单价</th>
                                                     <th class="text-right" style="width: 120px;">数量</th>
                                                     <th class="text-right" style="width: 120px;">商品状态</th>
@@ -415,7 +415,7 @@
                                                     <td class="text-center">1</td>
                                                     <th class="text-center" style="width: 100px;"> 主入户门</th>
                                                     <td class="text-center">SMW2016254879</td>
-                                                    <td class="text-right">樘</td>
+                                                    <td class="text-center">樘</td>
                                                     <td class="text-right">￥2500</td>
                                                     <td class="text-right">1</td>
                                                     <td class="text-right">未发货</td>
@@ -426,7 +426,7 @@
                                                     <td class="text-center">1</td>
                                                     <th class="text-center" style="width: 100px;"> 主入户门</th>
                                                     <td class="text-center">SMW2016254879</td>
-                                                    <td class="text-right">樘</td>
+                                                    <td class="text-center">樘</td>
                                                     <td class="text-right">￥2500</td>
                                                     <td class="text-right">1</td>
                                                     <td class="text-right">未发货</td>
@@ -436,7 +436,7 @@
                                                     <td class="text-center">1</td>
                                                     <th class="text-center" style="width: 100px;"> 主入户门</th>
                                                     <td class="text-center">SMW2016254879</td>
-                                                    <td class="text-right">樘</td>
+                                                    <td class="text-center">樘</td>
                                                     <td class="text-right">￥2500</td>
                                                     <td class="text-right">1</td>
                                                     <td class="text-right">未发货</td>
@@ -493,9 +493,9 @@
                                             <thead>
                                                 <tr>
                                                     <th class="text-center" style="width: 50px;"></th>
-                                                    <th>商品名称</th>
+                                                    <th class="text-center">商品名称</th>
                                                     <th class="text-center" style="width: 100px;">商品编号</th>
-                                                    <th class="text-right" style="width: 120px;">单位</th>
+                                                    <th class="text-center" style="width: 120px;">单位</th>
                                                     <th class="text-right" style="width: 120px;">单价</th>
                                                     <th class="text-right" style="width: 120px;">数量</th>
                                                     <th class="text-right" style="width: 120px;">商品状态</th>
@@ -507,7 +507,7 @@
                                                     <td class="text-center">1</td>
                                                     <th class="text-center" style="width: 100px;"> 主入户门</th>
                                                     <td class="text-center">SMW2016254879</td>
-                                                    <td class="text-right">樘</td>
+                                                    <td class="text-center">樘</td>
                                                     <td class="text-right">￥2500</td>
                                                     <td class="text-right">1</td>
                                                     <td class="text-right">未发货</td>
@@ -518,7 +518,7 @@
                                                     <td class="text-center">1</td>
                                                     <th class="text-center" style="width: 100px;"> 主入户门</th>
                                                     <td class="text-center">SMW2016254879</td>
-                                                    <td class="text-right">樘</td>
+                                                    <td class="text-center">樘</td>
                                                     <td class="text-right">￥2500</td>
                                                     <td class="text-right">1</td>
                                                     <td class="text-right">未发货</td>
@@ -528,7 +528,7 @@
                                                     <td class="text-center">1</td>
                                                     <th class="text-center" style="width: 100px;"> 主入户门</th>
                                                     <td class="text-center">SMW2016254879</td>
-                                                    <td class="text-right">樘</td>
+                                                    <td class="text-center">樘</td>
                                                     <td class="text-right">￥2500</td>
                                                     <td class="text-right">1</td>
                                                     <td class="text-right">未发货</td>
@@ -548,9 +548,11 @@
                                     <table class="table table-bordered deliveryinfo-table">
                                         <thead>
                                             <tr>
-                                                <th class="text-left" colspan="5">
+                                                <th class="text-left th-title" colspan="4">
                                                     共计2件 预计进场时间：2016-08-21 物流公司：韵达快递 运单编号：45896542698754623562
+                                                    
                                                 </th>
+                                                <td class="text-right"><button type="button" class="btn btn-primary">查看物流</button></td>
                                             </tr>
                                         </thead>
                                         <tbody>
