--- a/assets/css/provider.css
+++ b/assets/css/provider.css
@@ -78,27 +78,12 @@
     .provider-details .orderinfo .form-check > div:nth-child(4) .btn {
       margin-right: 4%; }
 
-.provider-details .orderinfo .orderinfo-complete-view .block-options > li > button {
-  padding: 6px 12px;
-  border-radius: 4px;
-  background: #5c90d2;
-  border: #3675c5;
-  opacity: 1; }
-
-.provider-details .orderinfo .orderinfo-complete-view .deliveryinfo .deliveryinfo-sign ul > li {
-  margin-bottom: 10px;
-  list-style-type: none;
-  vertical-align: middle; }
-
-.provider-details .orderinfo .orderinfo-complete-view .deliveryinfo .deliveryinfo-sign .deliveryinfo-sign-details {
+.provider-details .orderinfo .orderinfo-complete-view .orderinfo-complete-delivery {
   position: relative; }
-  .provider-details .orderinfo .orderinfo-complete-view .deliveryinfo .deliveryinfo-sign .deliveryinfo-sign-details .order-number {
+  .provider-details .orderinfo .orderinfo-complete-view .orderinfo-complete-delivery thead tr th .th-title button {
+    display: block;
     position: absolute;
-    top: 26%;
-    right: 4%; }
-
-.provider-details .orderinfo .orderinfo-complete-view .deliveryinfo .deliveryinfo-sign .deliveryinfo-order-time {
-  margin-top: 20px; }
+    right: 0; }
 
 .provider-details .returninfo .form-check {
   padding: 6px 10px;
