--- a/assets/css/provider.css
+++ b/assets/css/provider.css
@@ -15,6 +15,9 @@
   border-bottom: 2px solid #fff;
   background-color: #fefefe; }
 
+a:hover {
+  cursor: pointer; }
+
 .provider .form-check > div:nth-child(1) {
   width: 18%; }
   .provider .form-check > div:nth-child(1) > label {
@@ -78,12 +81,8 @@
     .provider-details .orderinfo .form-check > div:nth-child(4) .btn {
       margin-right: 4%; }
 
-.provider-details .orderinfo .orderinfo-complete-view .orderinfo-complete-delivery {
-  position: relative; }
-  .provider-details .orderinfo .orderinfo-complete-view .orderinfo-complete-delivery thead tr th .th-title button {
-    display: block;
-    position: absolute;
-    right: 0; }
+.provider-details .returninfo .table {
+  margin-top: 20px; }
 
 .provider-details .returninfo .form-check {
   padding: 6px 10px;
