--- a/templates/appeal.html
+++ b/templates/appeal.html
@@ -1,5 +1,15 @@
 
-<div class="col-lg-12">
+<div class="appeal">
+     <div class="content bg-gray-lighter">
+        <div class="row">
+            <div class="col-sm-5 hidden-xs">
+                <ol class="breadcrumb">
+                    <li>申诉管理</li>
+                    <li><a class="link-effect" href="">退换货申诉</a></li>
+                </ol>
+            </div>   
+        </div>
+    </div>
     <div class="content content-check">
         <form class="form-inline form-check" action="base_forms_elements.html" method="post" onsubmit="return false;">
             <div class="form-group">
@@ -21,81 +31,77 @@
                 <input class="form-control" type="text" id="example-if-password" name="example-if-password" >
             </div>
             <div class="form-group">
-                <button class="btn btn-primary" type="submit">查询</button>
+                <button class="btn btn-info" type="submit">查询</button>
                 <button class="btn btn-primary" type="submit">重置</button>
             </div>
         </form>
     </div>
 
-    <div class="block">
-        <div class="block-header">
-            <ol class="breadcrumb push-10-t">
-                <li style="font-size: 20px;">申诉管理</li>
-                <li><a class="link-effect" href="">换货申诉</a></li>
-            </ol>
-        </div>
-        <div class="block-content">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th class="text-center" style="width: 50px;">#</th>
-                        <th>退换货订单号</th>
-                        <th class="hidden-xs" >订单号</th>
-                        <th class="text-center" >退货时间</th>
-                        <th>退货人</th>
-                        <th>审批状态</th>
-                        <th>所属区域</th>
-                        <th>供应商</th>
-                        <th>操作</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td class="text-center">1</td>
-                        <td>SMW48575468959</td>
-                        <td class="hidden-xs">SMWTHH85425155</td>
-                        <td class="text-center">2016-08-10 09：45：10</td>
-                        <td>张佳</td>
-                        <td>待审核</td>
-                        <td>重庆</td>
-                        <td>重庆飘瑞斯特贸易有限公司</td>
-                        <td><a href="">查看</a></td>
-                    </tr>
-                    <tr>
-                        <td class="text-center">2</td>
-                        <td>SMW48575468959</td>
-                        <td class="hidden-xs">SMWTHH85425155</td>
-                        <td class="text-center">2016-08-10 09：45：10</td>
-                        <td>张佳</td>
-                        <td>审核通过</td>
-                        <td>重庆</td>
-                        <td>重庆飘瑞斯特贸易有限公司</td>
-                        <td><a href="">查看</a></td>
-                    </tr>
-                    <tr>
-                        <td class="text-center">3</td>
-                        <td>SMW48575468959</td>
-                        <td class="hidden-xs">SMWTHH85425155</td>
-                        <td class="text-center">2016-08-10 09：45：10</td>
-                        <td>张佳</td>
-                        <td>审核拒绝</td>
-                        <td>重庆</td>
-                        <td>重庆飘瑞斯特贸易有限公司</td>
-                        <td><a href="">查看</a></td>
-                    </tr>
-                    <tr>
-                        <td class="text-center">4</td>
-                        <td>SMW48575468959</td>
-                        <td class="hidden-xs">SMWTHH85425155</td>
-                        <td class="text-center">2016-08-10 09：45：10</td>
-                        <td>张佳</td>
-                        <td>待审核</td>
-                        <td>重庆</td>
-                        <td>重庆飘瑞斯特贸易有限公司</td>
-                        <td><a href="">查看</a></td>
-                    </tr>
-                </tbody>
-            </table>
+    <div class="content">
+        <div class="block">
+            <div class="block-content">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th class="text-center" style="width: 50px;">#</th>
+                            <th>退换货订单号</th>
+                            <th class="hidden-xs" >订单号</th>
+                            <th class="text-center" >退货时间</th>
+                            <th>退货人</th>
+                            <th>审批状态</th>
+                            <th>所属区域</th>
+                            <th>供应商</th>
+                            <th>操作</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="text-center">1</td>
+                            <td>SMW48575468959</td>
+                            <td class="hidden-xs">SMWTHH85425155</td>
+                            <td class="text-center">2016-08-10 09：45：10</td>
+                            <td>张佳</td>
+                            <td>待审核</td>
+                            <td>重庆</td>
+                            <td>重庆飘瑞斯特贸易有限公司</td>
+                            <td><a href="">查看</a></td>
+                        </tr>
+                        <tr>
+                            <td class="text-center">2</td>
+                            <td>SMW48575468959</td>
+                            <td class="hidden-xs">SMWTHH85425155</td>
+                            <td class="text-center">2016-08-10 09：45：10</td>
+                            <td>张佳</td>
+                            <td>审核通过</td>
+                            <td>重庆</td>
+                            <td>重庆飘瑞斯特贸易有限公司</td>
+                            <td><a href="">查看</a></td>
+                        </tr>
+                        <tr>
+                            <td class="text-center">3</td>
+                            <td>SMW48575468959</td>
+                            <td class="hidden-xs">SMWTHH85425155</td>
+                            <td class="text-center">2016-08-10 09：45：10</td>
+                            <td>张佳</td>
+                            <td>审核拒绝</td>
+                            <td>重庆</td>
+                            <td>重庆飘瑞斯特贸易有限公司</td>
+                            <td><a href="">查看</a></td>
+                        </tr>
+                        <tr>
+                            <td class="text-center">4</td>
+                            <td>SMW48575468959</td>
+                            <td class="hidden-xs">SMWTHH85425155</td>
+                            <td class="text-center">2016-08-10 09：45：10</td>
+                            <td>张佳</td>
+                            <td>待审核</td>
+                            <td>重庆</td>
+                            <td>重庆飘瑞斯特贸易有限公司</td>
+                            <td><a href="">查看</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
