--- a/templates/provider.html
+++ b/templates/provider.html
@@ -75,7 +75,7 @@
                             <td class="hidden-xs">13548967845</td>
                             <td class="hidden-xs">主材</td>
                             <td class="hidden-xs">重庆</td>
-                            <td class="hidden-xs"><a ui-sref="provider.details">查看</a></td>
+                            <td class="hidden-xs"><a ui-sref="dashboard.provider.details">查看</a></td>
                         </tr>
                         <tr>
                             <td class="text-center">重庆飘瑞斯特贸易有限公司</td>
@@ -84,7 +84,7 @@
                             <td class="hidden-xs">13548967845</td>
                             <td class="hidden-xs">主材</td>
                             <td class="hidden-xs">重庆</td>
-                            <td class="hidden-xs"><a href="">查看</a></td>
+                            <td class="hidden-xs"><a ui-sref="dashboard.provider.details">查看</a></td>
                         </tr>
                        <tr>
                             <td class="text-center">重庆飘瑞斯特贸易有限公司</td>
