--- a/templates/sideBar.html
+++ b/templates/sideBar.html
@@ -85,13 +85,13 @@
                     <a class="nav-submenu" data-toggle="nav-submenu" ><i class="si si-wrench"></i><span class="sidebar-mini-hide">供应商管理</span></a>
                     <ul>
                         <li>
-                            <a ui-sref="provider">供应商管理</a>
+                            <a ui-sref="dashboard.provider">供应商管理</a>
                         </li>
                         <li>
-                            <a href="base_comp_charts.html">购订单管理</a>
+                            <a ui-sref="dashboard.purchase">采购订单管理</a>
                         </li>
                         <li>
-                            <a href="base_comp_charts.html">退换货订单管理</a>
+                            <a ui-sref="dashboard.purchase"">退换货订单管理</a>
                         </li>                        
                     </ul>
                 </li>
