add purchase_details.html and returngoods.html

--- a/templates/provider_details.html
+++ b/templates/provider_details.html
@@ -1,7 +1,7 @@
 <div class="provider-details">
     <div class="content bg-gray-lighter">
         <div class="row">
-            <div class="col-sm-5 hidden-xs">
+            <div class="hidden-xs">
                 <ol class="breadcrumb">
                     <li>供用商管理</li>
                     <li><a class="link-effect" href="">供应商详情</a></li>
