--- a/templates/sideBar.html
+++ b/templates/sideBar.html
@@ -91,7 +91,7 @@
                             <a ui-sref="dashboard.purchase">采购订单管理</a>
                         </li>
                         <li>
-                            <a ui-sref="dashboard.purchase"">退换货订单管理</a>
+                            <a ui-sref="dashboard.returngoods"">退换货订单管理</a>
                         </li>                        
                     </ul>
                 </li>
