--- a/templates/returngoods.html
+++ b/templates/returngoods.html
@@ -1,11 +1,11 @@
-<div class="purchase">
+<div class="provider">
     <!-- Page Header -->
     <div class="content">
         <div class="">
             <div class="hidden-xs">
                 <ol class="breadcrumb">
-                    <li>采购订单管理</li>
-                    <li><a class="link-effect" href="">订单管理</a></li>
+                    <li>退换货订单管理</li>
+                    <li><a class="link-effect" href="">退换货订单管理详情</a></li>
                 </ol>
             </div>   
         </div>
@@ -16,15 +16,15 @@
     <div class="content content-check search-bar bg-gray-lighter">
         <form class="form-inline form-check" action="base_forms_elements.html" method="post" onsubmit="return false;">
             <div class="form-group">
-                <label  for="example-if-email">订单号</label>
+                <label  for="example-if-email">退换货订单号</label>
                 <input class="form-control" type="text" ="" id="example-if-email" name="example-if-email" placeholder="Enter providerName..">
             </div>
             <div class="form-group">
-                <label  for="example-if-password">供应商</label>
+                <label  for="example-if-password">订单号</label>
                 <input class="form-control" type="text" id="example-if-password" name="example-if-password" placeholder="Enter Name..">
             </div>
             <div class="form-group">
-                <label  for="example-if-password">下单时间</label>
+                <label  for="example-if-password">退换货时间</label>
                 <input class="form-control" type="text" id="example-if-password" name="example-if-password" >-
                 <input class="form-control" type="text" id="example-if-password" name="example-if-password" >
             </div>
@@ -32,13 +32,16 @@
                 <label for="example-select">订单状态</label>
                     <select class="form-control" id="example-select" name="example-select" size="1">
                         <option value="0">全部</option>
-                        <option value="1">主材</option>
-                        <option value="2">辅材</option>
+                        <option value="1">未完成</option>
+                        <option value="2">已完成</option>
                     </select>
             </div>
             <div class="form-group">
                 <button class="btn btn-primary" type="submit">查询</button>
                 <button class="btn btn-default" type="submit">重置</button>
+            </div>
+            <div class="form-group pull-right">
+                <button class="btn btn-info">添加供应商</button>
             </div>
         </form>
     </div>
@@ -77,64 +80,59 @@
     <div class="content">
         <!-- Dynamic Table Full -->
         <div class="block">
-            <table class="table table-hover">
+            <table class="table table-bordered table-striped js-dataTable-full">
                 <thead>
                     <tr>
-                        <th class="text-center" style="width: 50px;">#</th>
+                        <th class="text-center">退换货订单号</th>
                         <th>订单号</th>
-                        <th class="hidden-xs" >下单时间</th>
-                        <th >收货人</th>
-                        <th>总金额（元）</th>
-                        <th>订单状态</th>
+                        <th class="hidden-xs">退货时间</th>
+                        <th class="hidden-xs" style="width: 15%;">退货人</th>
+                        <th style="width: 10%;">退换货订单状态</th>
                         <th>所属区域</th>
                         <th>供应商</th>
-                        <th class="text-center">操作</th>
+                        <th>操作</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="text-center">1</td>
-                        <td>SMW48575468959</td>
+                        <td class="text-center">SMW48575468959</td>
+                        <td class="font-w600">SMWTHH85425155</td>
                         <td class="hidden-xs">2016-08-10 09：45：10</td>
-                        <td >张佳</td>
-                        <td>62000.00</td>
-                        <td>未完成</td>
-                        <td>重庆</td>
-                        <td>重庆飘瑞斯特贸易有限公司</td>
-                        <td class="text-center"><a ui-sref="dashboard.purchase.details">查看</a></td>
+                        <td class="hidden-xs">张佳</td>
+                        <td class="hidden-xs">未完成</td>
+                        <td class="hidden-xs">重庆</td>
+                        <td class="hidden-xs">重庆飘瑞斯特贸易有限公司</td> 
+                        <td class="hidden-xs"><a href="">查看</a></td>
                     </tr>
-                    <tr>
-                        <td class="text-center">2</td>
-                         <td>SMW48575468959</td>
+                   <tr>
+                        <td class="text-center">SMW48575468959</td>
+                        <td class="font-w600">SMWTHH85425155</td>
                         <td class="hidden-xs">2016-08-10 09：45：10</td>
-                        <td >张佳</td>
-                        <td>62000.00</td>
-                        <td>未完成</td>
-                        <td>重庆</td>
-                        <td>重庆飘瑞斯特贸易有限公司</td>
-                        <td class="text-center"><a href="">查看</a></td>
+                        <td class="hidden-xs">张佳</td>
+                        <td class="hidden-xs">未完成</td>
+                        <td class="hidden-xs">重庆</td>
+                        <td class="hidden-xs">重庆飘瑞斯特贸易有限公司</td> 
+                        <td class="hidden-xs"><a href="">查看</a></td>
                     </tr>
-                    <tr>
-                        <td class="text-center">3</td>
-                         <td>SMW48575468959</td>
+                   <tr>
+                        <td class="text-center">SMW48575468959</td>
+                        <td class="font-w600">SMWTHH85425155</td>
                         <td class="hidden-xs">2016-08-10 09：45：10</td>
-                        <td >张佳</td>
-                        <td>62000.00</td>
-                        <td>未完成</td>
-                        <td>重庆</td>
-                        <td>重庆飘瑞斯特贸易有限公司</td>
-                        <td class="text-center"><a href="">查看</a></td>
+                        <td class="hidden-xs">张佳</td>
+                        <td class="hidden-xs">未完成</td>
+                        <td class="hidden-xs">重庆</td>
+                        <td class="hidden-xs">重庆飘瑞斯特贸易有限公司</td> 
+                        <td class="hidden-xs"><a href="">查看</a></td>
                     </tr>
-                    <tr>
-                        <td class="text-center">4</td>
-                         <td>SMW48575468959</td>
+                   <tr>
+                        <td class="text-center">SMW48575468959</td>
+                        <td class="font-w600">SMWTHH85425155</td>
                         <td class="hidden-xs">2016-08-10 09：45：10</td>
-                        <td >张佳</td>
-                        <td>62000.00</td>
-                        <td>未完成</td>
-                        <td>重庆</td>
-                        <td>重庆飘瑞斯特贸易有限公司</td>
-                        <td class="text-center"><a href="">查看</a></td>
+                        <td class="hidden-xs">张佳</td>
+                        <td class="hidden-xs">未完成</td>
+                        <td class="hidden-xs">重庆</td>
+                        <td class="hidden-xs">重庆飘瑞斯特贸易有限公司</td> 
+                        <td class="hidden-xs"><a href="">查看</a></td>
                     </tr>
                 </tbody>
             </table>
