--- a/assets/scss/provider.scss
+++ b/assets/scss/provider.scss
@@ -22,40 +22,40 @@ a:hover {
 .provider {
 	.form-check {
 
-		& > div:nth-child(1) {
-			width: 18%;
-			> label {
-				margin-right: 2%; 
-			}
-		}
-		& > div:nth-child(2) {
-			width: 18%;
-			> label {
-				margin-right: 2%; 
-			}
-		}
-		& > div:nth-child(3) {
-			width: 18%;
-			> label {
-				margin-right: 2%; 
-			}
-		}
-		& > div:nth-child(4) {
-			width: 18%;
-			> label {
-				margin-right: 2%; 
-			}
-		}
-		& > div:nth-child(5) {
-			width: 16%;
-			> label {
-				margin-right: 2%; 
-			}
-		}
-		& > div:nth-child(6) {
-			width: 10%;
-			text-align: right;
-		}
+		// & > div:nth-child(1) {
+		// 	width: 18%;
+		// 	> label {
+		// 		margin-right: 2%; 
+		// 	}
+		// }
+		// & > div:nth-child(2) {
+		// 	width: 18%;
+		// 	> label {
+		// 		margin-right: 2%; 
+		// 	}
+		// }
+		// & > div:nth-child(3) {
+		// 	width: 18%;
+		// 	> label {
+		// 		margin-right: 2%; 
+		// 	}
+		// }
+		// & > div:nth-child(4) {
+		// 	width: 18%;
+		// 	> label {
+		// 		margin-right: 2%; 
+		// 	}
+		// }
+		// & > div:nth-child(5) {
+		// 	width: 16%;
+		// 	> label {
+		// 		margin-right: 2%; 
+		// 	}
+		// }
+		// & > div:nth-child(6) {
+		// 	width: 10%;
+		// 	text-align: right;
+		// }
 	}
 	
 }
