--- a/assets/css/provider.css
+++ b/assets/css/provider.css
@@ -1,6 +1,15 @@
+.breadcrumb {
+  font-size: 16px !important; }
+
 .content-check {
+  background: #e5e5e5;
   padding: 10px 10px;
   margin: 0 30px; }
+
+.bg-gray-lighter {
+  border-top: 1px solid #fff;
+  border-bottom: 2px solid #fff;
+  background-color: #fefefe; }
 
 a:hover {
   cursor: pointer; }
